# tcp_server

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp  tcpclient.cpp  tcpclient.h
lib/: clientsocketmanager.cpp  clientsocketmanager.h  errorproc.cpp  errorproc.h  processerror.cpp  processerror.h  serversocketmanager.cpp  serversocketmanager.h  socketmanager.cpp  socketmanager.h
server/: CMakeLists.txt  main.cpp  tcpserver.cpp  tcpserver.h
